Added new mission statements

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -50,5 +50,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_testimonial_sliders";
 @import "pendigital/factory_logo_strips";
 @import "pendigital/factory_heroVideos";
+@import "pendigital/factory_mission_statements";
 
 /* Custom CSS rules come here */
