--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -51,5 +51,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_logo_strips";
 @import "pendigital/factory_heroVideos";
 @import "pendigital/factory_mission_statements";
+@import "pendigital/factory_ribbons";
 
 /* Custom CSS rules come here */
