Added people cards

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -52,5 +52,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_heroVideos";
 @import "pendigital/factory_mission_statements";
 @import "pendigital/factory_ribbons";
+@import "pendigital/factory_people";
 
 /* Custom CSS rules come here */
