--- a/bootstrap_theme/pendigital/factory_specials.scss
+++ b/bootstrap_theme/pendigital/factory_specials.scss
@@ -71,11 +71,15 @@
 
             &:focus {
                 outline: none;
+                background: linear-gradient($gray-200 0%, #ffffff 40%, #ffffff 60%, $gray-200 100%);
 
-                // p {
-                // outline: 2px dotted $primary;
-                // outline-offset: 5px;
-                // }
+                p {
+                    transform: translateY(-10px);
+
+                    &:after {
+                        width: 100%;
+                    }
+                }
             }
         }
 
@@ -101,6 +105,8 @@
             border-right: 1px solid $gray-300;
             position: relative;
             height: 0px;
+            padding-top: 0px;
+            padding-bottom: 0px;
         }
 
         header {
@@ -188,6 +194,45 @@
 
         @media (max-width: 991px) {
             height: auto;
+            padding-top: 30px;
+            padding-bottom: 30px;
+        }
+    }
+
+    .pd-specials-1-nav-mobile-col {
+        @media (min-width: 992px) {
+            display: none;
+        }
+    }
+
+    // outer link for nav
+    .pd-specials-1-button-mobile {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        text-decoration: none;
+        background: linear-gradient($gray-100 0%, #ffffff 20%, #ffffff 80%, $gray-100 100%);
+        border: 1px solid $gray-300;
+        border-radius: 50em;
+        padding: 10px 28px;
+        width: 260px;
+        height: 80px;
+        color: $primary;
+
+        // margin: 0px 4px;
+        div {
+            flex: 0 0 160px;
+            width: 210px;
+            height: auto;
+
+            p {
+                margin-bottom: 0px;
+                text-transform: uppercase;
+                font-weight: 700;
+                margin-left: 10px;
+                white-space: normal;
+            }
         }
     }
 }
