--- a/bootstrap_theme/pendigital/factory_specials.scss
+++ b/bootstrap_theme/pendigital/factory_specials.scss
@@ -232,6 +232,32 @@
                 font-weight: 700;
                 margin-left: 10px;
                 white-space: normal;
+                transition: transform 0.4s;
+
+                &:after {
+                    content: "";
+                    width: 0px;
+                    border-bottom: 2px solid $primary;
+                    transition: width 0.4s;
+                }
+            }
+        }
+    }
+
+    .pd-specials-1-button-mobile.show {
+        background: linear-gradient($gray-200 0%, #ffffff 40%, #ffffff 60%, $gray-200 100%);
+
+        div {
+            p {
+                transform: translateY(-10px);
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                align-items: flex-start;
+
+                &:after {
+                    width: 100%;
+                }
             }
         }
     }
