Added new carousel slider

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -54,5 +54,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_ribbons";
 @import "pendigital/factory_people";
 @import "pendigital/factory_specials_multiBox";
+@import "pendigital/factory_specials_carouselSteps";
 
 /* Custom CSS rules come here */
