Added grow icons

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -55,5 +55,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_people";
 @import "pendigital/factory_specials_multiBox";
 @import "pendigital/factory_specials_carouselSteps";
+@import "pendigital/factory_specials_stats";
 
 /* Custom CSS rules come here */
