--- a/bootstrap_theme/pendigital/factory_specials_stats.scss
+++ b/bootstrap_theme/pendigital/factory_specials_stats.scss
@@ -1,113 +1,145 @@
 // start pd-specials-stats-1
 .pd-specials-stats-1 {
-    .pd-specials-stats-1-icon-outer {
-        width: 152px;
-        background: $white;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        height: 152px;
-        border-radius: 50%;
-        padding: 12px;
-        position: relative;
-        z-index: 1;
-
-        @media (max-width: 575px) {
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .pd-specials-stats-1-icon-container {
-            flex: 0 0 auto;
-            padding: 26px;
+    .pd-specials-stats-1-stat-wrapper {
+        .pd-specials-stats-1-icon-outer {
+            width: 152px;
             background: $white;
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             justify-content: center;
             align-items: center;
-            border: 4px solid $info;
-            box-shadow: 4px 3px 8px -1px rgba(0, 0, 0, 0.4);
-            z-index: 1;
+            height: 152px;
+            border-radius: 50%;
+            padding: 12px;
             position: relative;
+            z-index: 1;
 
-            img {
-                width: 54px;
-                height: 54px;
+            @media (max-width: 575px) {
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .pd-specials-stats-1-icon-container {
+                flex: 0 0 auto;
+                padding: 26px;
+                background: $white;
+                width: 120px;
+                height: 120px;
+                border-radius: 50%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                border: 4px solid $info;
+                box-shadow: 4px 3px 8px -1px rgba(0, 0, 0, 0.4);
+                z-index: 1;
+                position: relative;
+                transform: scale(1);
+
+                // animation: pd-specials-stat-1-pulse 2s;
+                img {
+                    width: 54px;
+                    height: 54px;
+                }
             }
         }
-    }
 
-    .pd-specials-stats-1-icon-outer.right {
-        @media (min-width: 576px) {
-            margin-right: 0;
-            margin-left: auto;
+        .pd-specials-stats-1-icon-outer.right {
+            @media (min-width: 576px) {
+                margin-right: 0;
+                margin-left: auto;
+            }
         }
-    }
 
-    .pd-specials-stats-1-text-outer {
-        background: linear-gradient($info 0%, darken($info, 3) 100%);
-        min-height: 80px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        top: -40px;
-        z-index: 0;
-        max-width: 70%;
-        box-shadow: 4px 3px 8px -1px rgba(0, 0, 0, 0.4);
+        .pd-specials-stats-1-text-outer {
+            background: linear-gradient($info 0%, darken($info, 3) 100%);
+            min-height: 80px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            top: -40px;
+            z-index: 0;
+            max-width: 70%;
+            box-shadow: 4px 3px 8px -1px rgba(0, 0, 0, 0.4);
 
-        @media (max-width: 575px) {
-            padding-top: 50px;
-            padding-left: 20px;
-            padding-right: 20px;
-            max-width: 100%;
-            border-bottom-right-radius: 10px;
-            border-bottom-left-radius: 10px;
+            @media (max-width: 575px) {
+                padding-top: 50px;
+                padding-left: 20px;
+                padding-right: 20px;
+                max-width: 100%;
+                border-bottom-right-radius: 10px;
+                border-bottom-left-radius: 10px;
+
+                p {
+                    text-align: center;
+                }
+            }
 
             p {
-                text-align: center;
+                font-weight: 300;
+                font-size: 0.9em;
+                line-height: 1.8;
+                letter-spacing: 0.05em;
+                margin-bottom: 0px;
+                color: $white;
+
+                span {
+                    font-size: 1.4rem;
+                    font-weight: 700;
+                    opacity: 0;
+                    line-height: 1;
+                }
             }
         }
 
-        p {
-            font-weight: 300;
-            font-size: 0.9em;
-            line-height: 1.8;
-            letter-spacing: 0.05em;
-            margin-bottom: 0px;
-            color: $white;
+        .pd-specials-stats-1-text-outer.left {
+            @media (min-width: 576px) {
+                left: 90px;
+                border-bottom-right-radius: 10px;
+                padding-left: 55px;
+                padding-right: 20px;
+            }
+        }
 
-            span {
-                font-size: 1.4rem;
-                font-weight: 700;
+        .pd-specials-stats-1-text-outer.right {
+            @media (min-width: 576px) {
+                margin-right: 90px;
+                margin-left: auto;
+                border-bottom-left-radius: 10px;
+                padding-right: 55px;
+                padding-left: 20px;
+                text-align: right;
             }
         }
     }
 
-    .pd-specials-stats-1-text-outer.left {
-        @media (min-width: 576px) {
-            left: 90px;
-            border-bottom-right-radius: 10px;
-            padding-left: 55px;
-            padding-right: 20px;
+    .pd-specials-stats-1-stat-wrapper.in-view {
+        .pd-specials-stats-1-icon-container {
+            animation: pd-specials-stat-1-pulse .7s;
         }
     }
 
-    .pd-specials-stats-1-text-outer.right {
-        @media (min-width: 576px) {
-            margin-right: 90px;
-            margin-left: auto;
-            border-bottom-left-radius: 10px;
-            padding-right: 55px;
-            padding-left: 20px;
-            text-align: right;
+    @keyframes pd-specials-stat-1-pulse {
+        0% {
+            transform: scale(0.85);
+
+            // box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.8);
+        }
+
+        70% {
+            transform: scale(1.2);
+
+            // box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+        }
+
+        100% {
+            transform: scale(1);
+
+            // box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
         }
     }
 }
