--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -760,6 +760,120 @@
 }
 
 // end pd-section-11
+// start pd-section-12
+.pd-section-12 {
+    .pd-section-12-col {
+        position: relative;
+        flex-basis: 50%;
+        flex-grow: 0;
+        flex-shrink: 0;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+
+        @media (max-width: 991px) {
+            flex-basis: 100%;
+            align-items: center;
+        }
+
+        h3 {
+            color: $white;
+            font-size: 2rem;
+            font-weight: 700;
+
+            @media (max-width: 991px) {
+                text-align: center;
+            }
+        }
+    }
+
+    .pd-section-12-col.pd-right {
+        align-items: flex-end;
+
+        @media (max-width: 991px) {
+            align-items: center;
+        }
+
+        @media (min-width: 1400px) {
+            padding-right: 200px;
+        }
+    }
+
+    .pd-section-12-col.pd-left {
+        @media (min-width: 1400px) {
+            padding-left: 200px;
+        }
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        color: $white;
+        font-weight: 300;
+
+        // text-transform: uppercase;
+        font-size: 1rem;
+
+        li {
+            padding-top: 4px;
+            padding-bottom: 4px;
+            padding-left: 32px;
+            position: relative;
+
+            &:before {
+                content: url(/images/design-assets/icon-checkmark.svg);
+                width: 12px;
+                height: 12px;
+                position: absolute;
+                left: 0;
+            }
+        }
+    }
+
+    ul.pd-section-12-ul-negative {
+        li {
+            &:before {
+                content: url(/images/design-assets/icon-checkmark-no.svg);
+            }
+        }
+    }
+
+    .pd-section-12-image-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: rgba(23, 169, 230, 0.95);
+
+        // background: linear-gradient(rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.8) 100%);
+        // background: linear-gradient(rgba(23, 169, 230, 0.95) 0%, rgba(23, 169, 230, 0.8) 30%, rgba(23, 169, 230, 0.8) 70%, rgba(23, 169, 230, 0.95) 100%);
+    }
+
+    .pd-section-12-background-image-outer {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: red;
+        opacity: 1;
+        overflow: hidden;
+
+        img {
+            object-fit: cover;
+            object-position: center center;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+// end pd-section-12
+
 
 
 
