Added to actions .scss file

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -57,5 +57,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_specials_carouselSteps";
 @import "pendigital/factory_specials_stats";
 @import "pendigital/factory_lists";
+@import "pendigital/factory_call_to_actions";
 
 /* Custom CSS rules come here */
