--- a/bootstrap_theme/pendigital/factory_call_to_actions.scss
+++ b/bootstrap_theme/pendigital/factory_call_to_actions.scss
@@ -183,5 +183,78 @@
     }
 }
 
+// start pd-CTA-5
+.pd-CTA-5 {
+    background: linear-gradient(180deg, $primary, darken($primary, 10%));
+
+    .pd-CTA-5-text-col {
+        h2 {
+            font-weight: 300;
+            color: $white;
+            font-size: 1.2rem;
+        }
+
+        .pd-CTA-5-headline {
+            font-size: 2.4rem;
+            color: $white;
+            margin-bottom: 0px;
+            font-weight: 300;
+
+            p {
+                margin-bottom: 0px;
+            }
+        }
+
+        .pd-CTA-5-subHeadline {
+            font-size: 1rem;
+            color: $white;
+            font-weight: 300;
+        }
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .btn.btn-info {
+        color: $white;
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 2px;
+        }
+    }
+
+    .pd-CTA-5-image-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.6) 30%, rgba(0, 0, 0, 0.6) 70%, rgba(0, 0, 0, 0.7) 100%);
+    }
+
+    .pd-CTA-5-image-outer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+        }
+    }
+}
+
+// end pd-CTA-5
+
+
+
+
 
 
