Added latest posts to theme

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -58,5 +58,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_specials_stats";
 @import "pendigital/factory_lists";
 @import "pendigital/factory_call_to_actions";
+@import "pendigital/factory_cards_posts";
 
 /* Custom CSS rules come here */
