--- a/bootstrap_theme/pendigital/factory_heroVideos.scss
+++ b/bootstrap_theme/pendigital/factory_heroVideos.scss
@@ -37,16 +37,11 @@
 
     .pd-hero-video-1-videoWrapper {
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
 
-        video {
-            width: 100%;
-
-            @media (min-width: 1199px) {
-                width: 80%;
-            }
+        @media (min-width: 1200px) {
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 }
@@ -89,16 +84,11 @@
 
     .pd-hero-video-2-videoWrapper {
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
 
-        video {
-            width: 100%;
-
-            @media (min-width: 1199px) {
-                width: 80%;
-            }
+        @media (min-width: 1200px) {
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 }
@@ -180,19 +170,6 @@
             }
         }
     }
-
-    .pd-hero-video-3-video-outer {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        video {
-            width: 100%;
-        }
-    }
 }
 
 // end pd-video-hero-3
@@ -268,19 +245,6 @@
                     outline-offset: 2px;
                 }
             }
-        }
-    }
-
-    .pd-hero-video-4-video-outer {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        video {
-            width: 100%;
         }
     }
 }
@@ -406,6 +370,7 @@
         position: absolute;
         top: 10px;
         right: 10px;
+        z-index: 1;
 
         a.pd-hero-video-5-close {
             display: inline-block;
@@ -434,15 +399,27 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        width: 100%;
         height: 100%;
-        padding: 30px;
+        position: relative;
+        z-index: 0;
 
-        video {
+        @media (max-width: 575px) {
+            padding: 10px;
+        }
+
+        @media (min-width: 576px) {
+            padding: 30px;
+        }
+
+        .pd-hero-video-5-modal-video-inner {
             width: 100%;
 
             @media (min-width: 1200px) {
-                // width: 80vw;
-                max-width: 1200px;
+                width: 80%;
+
+                // margin-left: auto;
+                // margin-right: auto;
             }
         }
     }
