--- a/bootstrap_theme/pendigital/factory_heroVideos.scss
+++ b/bootstrap_theme/pendigital/factory_heroVideos.scss
@@ -587,6 +587,7 @@
         position: absolute;
         top: 10px;
         right: 10px;
+        z-index: 1;
 
         a.pd-hero-video-6-close {
             display: inline-block;
@@ -615,15 +616,27 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        width: 100%;
         height: 100%;
-        padding: 30px;
+        position: relative;
+        z-index: 0;
 
-        video {
+        @media (max-width: 575px) {
+            padding: 10px;
+        }
+
+        @media (min-width: 576px) {
+            padding: 30px;
+        }
+
+        .pd-hero-video-6-modal-video-inner {
             width: 100%;
 
             @media (min-width: 1200px) {
-                // width: 80vw;
-                max-width: 1200px;
+                width: 80%;
+
+                // margin-left: auto;
+                // margin-right: auto;
             }
         }
     }
