Added new fix for modal hero 6

--- a/bootstrap_theme/pendigital/factory_heroVideos.scss
+++ b/bootstrap_theme/pendigital/factory_heroVideos.scss
@@ -601,6 +601,7 @@
             border: none;
             background: none;
             padding: none;
+            cursor: pointer;
 
             img {
                 margin-left: 4px;
