--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -43,6 +43,7 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_mainNavs";
 @import "pendigital/factory_hamburgers";
 @import "pendigital/factory_heroes";
+@import "pendigital/factory_heroesHalf";
 @import "pendigital/factory_testimonials";
 @import "pendigital/factory_cards";
 @import "pendigital/factory_sections";
