--- a/bootstrap_theme/pendigital/factory_heroesHalf.scss
+++ b/bootstrap_theme/pendigital/factory_heroesHalf.scss
@@ -66,12 +66,18 @@
         left: 0;
         overflow: hidden;
 
-        img {
+        .pd-heroesHalf-1-image {
             width: 100%;
             height: 100%;
             object-fit: cover;
             object-position: center center;
             position: absolute;
+            transition: opacity 0.4s;
+            opacity: 0;
+        }
+
+        .pd-heroesHalf-1-image.pd-heroesHalf-1-image-loaded {
+            opacity: 1;
         }
     }
 
@@ -86,7 +92,135 @@
     }
 }
 
+// end pd-heroesHalf-1
+// start pd-heroesHalf-2
+.pd-heroesHalf-2 {
+    background: linear-gradient(180deg, $primary, darken($primary, 10%));
 
+    .pd-heroesHalf-2-text-outer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+        @media (max-width: 575px) {
+            min-height: 300px;
+        }
+
+        h1 {
+            font-weight: 700;
+            font-size: 0.7rem;
+            color: $white;
+            display: inline-block;
+
+            // background: rgba(255, 255, 255, 1);
+            background: $info;
+            padding: 8px 14px;
+            border-radius: 50em;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+        }
+
+        .pd-heroesHalf-2-headline {
+            color: white;
+            font-weight: 300;
+            font-size: 2rem;
+            line-height: 1.5;
+
+            p {
+                margin-bottom: 0px;
+            }
+
+            strong {
+                font-weight: 700;
+            }
+
+            @media (max-width: 575px) {
+                font-size: 2rem;
+            }
+        }
+
+        .pd-heroesHalf-2-subHeadline {
+            color: white;
+            font-size: 1rem;
+            font-weight: 300;
+
+            p {
+                margin-bottom: 0px;
+            }
+
+            strong {
+                font-weight: 700;
+            }
+        }
+    }
+}
+
+// end pd-heroesHalf-2
+// start pd-heroesHalf-3
+.pd-heroesHalf-3 {
+    background: linear-gradient(#f7f7f7 0%, #f9f9f9 20%, #f9f9f9 90%, #f7f7f7 100%);
+
+    .pd-heroesHalf-3-text-outer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+        @media (max-width: 575px) {
+            min-height: 300px;
+        }
+
+        h1 {
+            font-weight: 700;
+            font-size: 0.7rem;
+            color: $white;
+            display: inline-block;
+
+            // background: rgba(255, 255, 255, 1);
+            background: $info;
+            padding: 8px 14px;
+            border-radius: 50em;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+        }
+
+        .pd-heroesHalf-3-headline {
+            color: $primary;
+            font-weight: 300;
+            font-size: 2rem;
+            line-height: 1.5;
+
+            p {
+                margin-bottom: 0px;
+            }
+
+            strong {
+                font-weight: 700;
+            }
+
+            @media (max-width: 575px) {
+                font-size: 2rem;
+            }
+        }
+
+        .pd-heroesHalf-3-subHeadline {
+            color: $gray-600;
+            font-size: 1rem;
+            font-weight: 300;
+
+            p {
+                margin-bottom: 0px;
+            }
+
+            strong {
+                font-weight: 700;
+            }
+        }
+    }
+}
+
+// end pd-heroesHalf-3
 
 
 
