--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -60,5 +60,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_lists";
 @import "pendigital/factory_call_to_actions";
 @import "pendigital/factory_cards_posts";
+@import "pendigital/factory_headlines";
 
 /* Custom CSS rules come here */
