Added social media share bars

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -61,5 +61,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_call_to_actions";
 @import "pendigital/factory_cards_posts";
 @import "pendigital/factory_headlines";
+@import "pendigital/factory_social_media_share";
 
 /* Custom CSS rules come here */
