--- a/bootstrap_theme/pendigital/factory_social_media_share.scss
+++ b/bootstrap_theme/pendigital/factory_social_media_share.scss
@@ -101,9 +101,12 @@
 // start pd-social-media-share-3
 .pd-social-media-share-3 {
     // border-top: 1px solid $gray-300;
-    border-bottom: 1px solid $gray-300;
+    // border-bottom: 1px solid $gray-300;
+    z-index: 30;
 
     .pd-social-media-share-3-outer {
+        position: absolute;
+        top: 0;
         background: $gray-100;
         padding: 8px;
         border-left: 1px solid $gray-200;
@@ -118,6 +121,15 @@
 
         @media (max-width: 575px) {
             flex-direction: column;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            width: 280px;
+        }
+
+        @media (min-width: 576px) {
+            right: 0;
         }
 
         .pd-social-media-share-3-icons-outer {
@@ -157,8 +169,11 @@
     border-top: 1px solid $gray-300;
     border-bottom: 1px solid $gray-300;
     height: 60px;
+    z-index: 30;
 
     .pd-social-media-share-4-outer {
+        position: absolute;
+        top: 0;
         background: rgba(255, 255, 255, 0.8);
         padding: 8px;
         border: 1px solid $gray-100;
@@ -171,6 +186,15 @@
 
         @media (max-width: 575px) {
             flex-direction: column;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            width: 280px;
+        }
+
+        @media (min-width: 576px) {
+            right: 0;
         }
 
         .pd-social-media-share-4-icons-outer {
